--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ferdhika31/laravel-lang-id": "^0.2.1",
         "google/apiclient": "*",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
