--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "start": "npx tailwindcss -i ./resources/css/input.css -o ./resources/css/app.css --watch",
+        "final": "npx tailwindcss -o ./public/css/styles.css --minify"
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.16",
+        "autoprefixer": "^10.4.18",
         "axios": "^1.6.1",
         "laravel-vite-plugin": "^1.0.0",
-        "postcss": "^8.4.33",
+        "postcss": "^8.4.36",
         "tailwindcss": "^3.4.1",
         "vite": "^5.0.0"
     },
