--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "barryvdh/laravel-dompdf": "*",
         "ferdhika31/laravel-lang-id": "^0.2.1",
         "google/apiclient": "^2.15",
         "guzzlehttp/guzzle": "^7.2",
